# PiPad-17

./: .gitignore  Cargo.toml  README.md  boot.py  build.sh  code.py
.cargo/: config  config.toml
src/: main.rs
