[package]
name = "pi_pad_17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f4xx-hal = { version = "0.16.2", features = ["stm32f411"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
cortex-m = "0.7.7"


[profile.dev]
debug = 1

[profile.release]
debug = 1
